--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
 <head>
-	<meta charset="utf-8">
+  <meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<title>My AngularJS App</title>
   	<meta name="description" content="">
@@ -30,7 +30,7 @@
 	    </div>
 	    <div class="navbar-collapse collapse">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#/view1">Dashboard</a></li>
+	        <li><a href="#/view1">ECKY PUTRADY</a></li>
 	        <li><a href="#/view2">Settings</a></li>
 	        <li><a href="#">Profile</a></li>
 	        <li><a href="#">Help</a></li>
